Corrected some alignment issues with the grid and issues with the daily date display.

--- a/main.css
+++ b/main.css
@@ -176,8 +176,7 @@ footer {
 
 .today-weather-bottom-container {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-row: auto auto;
+    grid-template-columns: 1fr 1fr;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
     margin-top: 15px;
